--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -16,7 +16,7 @@ jobs:
           echo "::set-output name=year::$(date +'%Y')"
           echo "::set-output name=month::$(date +'%m')"
           echo "::set-output name=day::$(date +'%d')"
-          echo "::set-output name=time::$(date +'%H:%M)"
+          echo "::set-output name=time::$(date +'%H:%M')"
       - name: Set up dir variables
         id: dir
         run: |          
