--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -16,17 +16,17 @@ jobs:
           echo "::set-output name=year::$(date +'%Y')"
           echo "::set-output name=month::$(date +'%m')"
           echo "::set-output name=day::$(date +'%d')"
-          echo "::set-output name=time::$(date +'%H:%M')"
+          echo "::set-output name=time::$(date +'%H_%M')"
       - name: Set up dir variables
         id: dir
         run: |          
           echo "::set-output name=dir::${{ steps.date.outputs.date }}/${{ steps.date.outputs.month }}/${{ steps.date.outputs.day }}"
       - name: Create directory structure
         run: |
-          mkdir -p ./${{ steps.dir.outputs.dir }}
+          mkdir -p ${{ github.workspace }}/${{ steps.dir.outputs.dir }}
       - name: Write .gitkeep file
         run: |
-          touch ./${{ steps.dir.outputs.dir }}/.gitkeep
+          touch ${{ github.workspace }}/${{ steps.dir.outputs.dir }}/.gitkeep
       - name: Setup deno
         uses: denoland/setup-deno@main
         with:
@@ -41,4 +41,4 @@ jobs:
             parking-data-${{ steps.date.outputs.time }}.csv
       - name: Move data to directory
         run: |
-          mv parking-data-${{ steps.date.outputs.time }}.csv ./${{ steps.dir.outputs.dir }}/parking-data-${{ steps.date.outputs.time }}.csv
+          mv parking-data-${{ steps.date.outputs.time }}.csv ${{ github.workspace }}/${{ steps.dir.outputs.dir }}/parking-data-${{ steps.date.outputs.time }}.csv
