Actualizados datos en estructuras de directorios

--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up dir variables
         id: dir
         run: |          
-          echo "::set-output name=dir::${{ steps.date.outputs.date }}/${{ steps.date.outputs.month }}/${{ steps.date.outputs.day }}"
+          echo "::set-output name=dir::${{ steps.date.outputs.year }}/${{ steps.date.outputs.month }}/${{ steps.date.outputs.day }}"
       - name: Create directory structure
         run: |
           mkdir -p ${{ github.workspace }}${{ steps.dir.outputs.dir }}
